--- a/auction-service/iam/AuctionsTableIAM.yml
+++ b/auction-service/iam/AuctionsTableIAM.yml
@@ -5,10 +5,18 @@ AuctionsTableIAM:
     - dynamodb:Scan
     - dynamodb:GetItem
     - dynamodb:UpdateItem
+    - dynamodb:Query
   Resource:
     # Old version:
     # - arn:aws:dynamodb:eu-west-1:658558064419:table/AuctionsTable
     # (this above can work, but its not flexible. So we use the serverless-pseudo-parameters plugin feature)
     # - arn:aws:dynamodb:#{AWS::Region}:#{AWS::AccountId}:table/AuctionsTable
+    #
     # New version:
     - ${self:custom.AuctionsTable.arn}
+    # We also need to add the 'virtual' table were our secondary indexes are stored
+    - !Join [
+        "/",
+        ["${self:custom.AuctionsTable.arn}", "index", "statusAndEndDate"],
+      ]
+    # That is equal to: ${self:custom.AuctionsTable.arn}/index/statusAndEndDate
