--- a/auction-service/serverless.yml
+++ b/auction-service/serverless.yml
@@ -52,6 +52,11 @@ functions:
           method: PATCH
           path: /auctions/{id}/bid
 
+  processAuctions:
+    handler: src/handlers/processAuctions.handler
+    # events:
+    #   - schedule: rate(1 minute)
+
 # This is just a custom yaml object that we created for facilitate some things
 custom:
   AuctionsTable:
