--- a/auction-service/serverless.yml
+++ b/auction-service/serverless.yml
@@ -30,6 +30,8 @@ functions:
       - http:
           method: POST
           path: /auctions
+          # Here goes the ARN of the lambda function that handles authorization
+          authorizer: ${self:custom.authorizer}
 
   getAuctions:
     handler: src/handlers/getAuctions.handler
@@ -37,6 +39,7 @@ functions:
       - http:
           method: GET
           path: /auctions
+          authorizer: ${self:custom.authorizer}
 
   getAuction:
     handler: src/handlers/getAuction.handler
@@ -44,6 +47,7 @@ functions:
       - http:
           method: GET
           path: /auctions/{id}
+          authorizer: ${self:custom.authorizer}
 
   placeBid:
     handler: src/handlers/placeBid.handler
@@ -51,6 +55,7 @@ functions:
       - http:
           method: PATCH
           path: /auctions/{id}/bid
+          authorizer: ${self:custom.authorizer}
 
   processAuctions:
     handler: src/handlers/processAuctions.handler
@@ -59,6 +64,8 @@ functions:
 
 # This is just a custom yaml object that we created for facilitate some things
 custom:
+  # #{} is the sintax for using pseudo-parameters
+  authorizer: arn:aws:lambda:#{AWS::Region}:#{AWS::AccountId}:function:auth-service-${self:provider.stage}-auth
   AuctionsTable:
     name: !Ref AuctionsTable
     arn: !GetAtt AuctionsTable.Arn
