--- a/notification-service/serverless.yml
+++ b/notification-service/serverless.yml
@@ -14,10 +14,26 @@ provider:
   iamRoleStatements:
     - ${file(iam/SendMailIAM.yml):SendMailIAM}
 
+resources:
+  Resources:
+    MailQueue: ${file(resources/MailQueue.yml):MailQueue}
+  Outputs:
+    MailQueueArn: ${file(resources/MailQueue.yml):Outputs.MailQueueArn}
+    MailQueueUrl: ${file(resources/MailQueue.yml):Outputs.MailQueueUrl}
+
 functions:
   sendMail:
     handler: src/handlers/sendMail.handler
-    # events:
-    #   - http:
-    #       method: GET
-    #       path: /hello
+    events:
+      - sqs:
+          arn: ${self:custom.mailQueue.arn}
+          # Quantity of messages processes per second
+          # Default value is 10. Set to 1 for testing purposes
+          batchSize: 1
+
+custom:
+  mailQueue:
+    name: MailQueue-${self:provider.stage}
+    arn: !GetAtt MailQueue.Arn
+    # Message que !Ref function returns the queue URL
+    url: !Ref MailQueue
