--- a/auction-service/serverless.yml
+++ b/auction-service/serverless.yml
@@ -36,6 +36,7 @@ functions:
       - http:
           method: POST
           path: /auctions
+          cors: true
           # Here goes the ARN of the lambda function that handles authorization
           authorizer: ${self:custom.authorizer}
 
@@ -45,6 +46,7 @@ functions:
       - http:
           method: PATCH
           path: auction/{id}/picture
+          cors: true
           authorizer: ${self:custom.authorizer}
 
   getAuctions:
@@ -53,6 +55,7 @@ functions:
       - http:
           method: GET
           path: /auctions
+          cors: true
           authorizer: ${self:custom.authorizer}
 
   getAuction:
@@ -61,6 +64,7 @@ functions:
       - http:
           method: GET
           path: /auctions/{id}
+          cors: true
           authorizer: ${self:custom.authorizer}
 
   placeBid:
@@ -69,6 +73,7 @@ functions:
       - http:
           method: PATCH
           path: /auctions/{id}/bid
+          cors: true
           authorizer: ${self:custom.authorizer}
 
   processAuctions:
