--- a/auction-service/serverless.yml
+++ b/auction-service/serverless.yml
@@ -45,7 +45,7 @@ functions:
     events:
       - http:
           method: PATCH
-          path: auction/{id}/picture
+          path: auctions/{id}/picture
           cors: true
           authorizer: ${self:custom.authorizer}
 
